--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,5 +3,6 @@ version: 0.2
 phases:
   build:
     commands:
+      - dotnet --list-sdks
       - dotnet restore CICDAWS.sln
       - dotnet build CICDAWS.sln
